@@ -9,6 +9,7 @@ Added
 Fixed
 - Redirect after login
 - Request vehicle status update when enabling
+- Developer branch webupdate
 
 Version 1.2.9           2021-05-06
 
